postgres-macros/tests/fail/literal_array_to_literal.stderr
error[E0271]: type mismatch resolving `<String as SqlType>::Type == Vec<String>`
 --> tests/fail/literal_array_to_literal.rs:6:10
  |
6 |         .await
  |          ^^^^^ expected `String`, found `Vec<String>`
  |
  = note: expected struct `String`
             found struct `Vec<String>`
  = note: required for `Sql<'_, Primitive<Vec<String>>, String>` to implement `IntoFuture`
